Added `background color` to navigation menu. Added `border` and changed `color`,`padding` and `line-height` of menu elements. Fixed the browser default `padding` and `margin` of the `ul` in `normalize.css`"

--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,11 @@
 /* write your css here */
+nav {
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+li {
+    border: 1px solid white;
+    color: white;
+    padding: 0.5em;
+    line-height: 1;
+}
