--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ html {
 nav {
     background-color: rgba(0, 0, 0, 0.5);
     position: fixed;
+    top:0px;
     width: 100%;
     padding: 0.5em;
 }
